# cyberloop

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flywheel.yaml  pyproject.toml  requirements.txt
client/: Cargo.toml
client/crates/card_renderer/: Cargo.toml
client/crates/client/: Cargo.toml
client/crates/client/src/: main.rs  state.rs  theme.rs  tooltip.rs  tooltip_text.rs
client/crates/client/src/plugins/: collection_overflow_ui.rs  deck_rebuild_ui.rs  deck_swap_ui.rs  game_over_ui.rs  gauntlet_reward_ui.rs  innate_choice_ui.rs  menu_ui.rs  mod.rs  phase_routing.rs  run_start_ui.rs
client/crates/client/src/plugins/combat_ui/: mod.rs  setup.rs  systems.rs
crates/content/: Cargo.toml
crates/content/src/: cards.rs  encounters.rs  enemies.rs  lib.rs  starter_decks.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: card.rs  card_ids.rs  class.rs  combat.rs  content_tables.rs  enemy.rs  feat.rs  ids.rs  lib.rs  player.rs  rng.rs  status.rs  subclass.rs  version.rs
crates/gauntlet/: Cargo.toml
crates/gauntlet/src/: lib.rs  observation.rs
crates/pyenv/: Cargo.toml
crates/pyenv/src/: features.rs  lib.rs
cyberloop/: __init__.py  artifact_validators.py  project.py
docker/: Dockerfile.cua-play-agent  Dockerfile.decker-desktop  Dockerfile.eval  Dockerfile.eval-bot  Dockerfile.eval-rl  Dockerfile.gui-escalation-gate  Dockerfile.gui-step  Dockerfile.improve-bot-agent  Dockerfile.improve-gui-action-decider-agent  Dockerfile.train  PERFORMANCE.md  cua_controller_entrypoint.sh  cua_controller_io.py
foundry/patterns/: train_eval.yaml
foundry/templates/: bot_eval.yaml  bot_improve.yaml  cyberloop.yaml  train_eval.yaml
foundry/templates/blocks/: CuaPlayAgent.yaml  DeckerDesktop.yaml  Eval.yaml  EvalBot.yaml  GuiEscalationGate.yaml  ImproveBot.yaml  ImproveGuiActionDecider.yaml  StepThroughGui.yaml  Train.yaml
patterns/: eval_only.yaml
research/: README.md  baseline_rl.py
scripts/: action_parser.py  bootstrap_ci.py  decker_env.py  eval_bot.py  eval_checkpoint.py  eval_common.py  eval_io.py  gui_escalation_gate.py  gui_play_step.py  gui_state_compare.py  model.py  numpy_eval.py  play_bot.py  strategy.py  train_impala.py  validate_gui_action_decider.py
tests/: _project_setup.py  conftest.py  test_artifact_validators.py  test_cua_controller.py  test_eval_block.py  test_gui_play_escalate.py  test_project_hooks.py  test_run_block_command.py  test_train_eval_pattern.py
workforce/blocks/: Eval.yaml  Train.yaml
workforce/prompts/: bot_improve.md
workforce/templates/: train_eval.yaml
(+23 files in other folders)
