[project]
name = "cyberloop"
version = "0.1.0"
description = "RL training and evaluation harness for the Decker gauntlet, orchestrated by flywheel"
requires-python = ">=3.12"
# The project hooks themselves only depend on flywheel (which
# the operator installs editable from the sibling repo, same
# pattern cyberarc uses); the Decker game and the RL training /
# eval scripts live under crates/ and scripts/ and pull their
# own dependencies from requirements.txt.
dependencies = []

[project.optional-dependencies]
# ``pip install -e ".[dev]"`` is enough to run the unit suite
# and ``ruff check``.
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["cyberloop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: requires Docker and a pre-built cyberloop image (opt-in via ``pytest -m docker``)",
]
addopts = "-m 'not docker'"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "D2", "PLC0415", "E741"]
